--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/aldayem/week-14-eat-the-burger-.git"
   },
-  "author": "",
+  "author": "ahmad aldayem",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/aldayem/week-14-eat-the-burger-/issues"
